--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    border: 5px solid purple;
+    flex-direction: column;
 }
 
 .gridHolder{
