--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 .gridHolder{
     display: inline-block;
-    border: 5px solid peru;
 }
 
 .tile {
@@ -16,6 +15,6 @@
     height: 20px;
     border: 1px solid black;
     display: inline-block;
-    margin: 0.5px;
     border-radius: 5px;
+    margin-inline: 3px;
   }
