add hover effect for tiles and add border to them

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,14 @@
 }
 
 .tile {
+    border: 1px solid black;
     width: 20px;
     height: 20px;
-    border: 1px solid black;
     display: inline-block;
     border-radius: 5px;
     margin-inline: 3px;
-  }
+}
+
+.tile:hover{
+    background-color: yellow;
+}
